--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "echarts": "^3.6.1",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.18.1",
     "mongoose": "^4.10.4",
     "nodemon": "^1.11.0",
